login/resources/css/ht6.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap');
:root {
    --secondary-dark-navy: #08566B;
    --copy-navy: #0B2F39;
    --form-half-width-width: 45%;
    --form-half-width-margin: 5%;
}
* {
    box-sizing: border-box;
}
html {
    height: 100%;
    font-family: 'Open Sans', sans-serif;
}

input {
    font-family: 'Open Sans', sans-serif;
}

a {
    color: #CA500B;
    font-weight: bold;
}

a:hover {
    color: #CC8535;
}

.ht6-kc-body {
    background: linear-gradient(88.96deg, #002C37 1.77%, #004D57 95.9%);
    background-size: cover;
    height: 100%;
    margin: 0;
}
.ht6-login {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
    padding: unset;
}
.ht6-login-header {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1000;
    display: flex;
    align-items: center;
    padding: calc(0.625rem + 8px) calc(1.5rem + 8px);
}

.ht6-login-header img {
    width: 24px;
    margin-right: 1rem;
}

.ht6-login-header span {
    font-weight: 700;
    font-size: 1.625rem;
    line-height: 2.5rem;
    letter-spacing: 0.0625rem;
}

.ht6-login-header span:first-of-type {
    color: rgb(35, 181, 175);
}

.ht6-login-header span:last-of-type {
    color: rgb(248, 182, 85);
}

.ht6-login-formcard {
    background-color: white;
    border-radius: 12px;
    width: 85vw;
    padding: 10% 10%;
}

.ht6-card-infoarea {
    color: var(--copy-navy);
    font-weight: bold;
}

@media (min-width: 768px) {
    .ht6-login-formcard {
        width: 70vw;
        padding: 5% 10%;
    }
}

@media (min-width: 992px) {
    .ht6-login-formcard {
        width: 55vw;
        padding: 2% 10%;
    }
}

.ht6-form-header {
    margin-bottom: 1em;
}
#kc-page-title-ht6 {
    color: #828282;
    font-weight: 600;
}
#kc-page-title {
    font-weight: 700;
    color: var(--secondary-dark-navy);
    font-size: 42px;
    text-align: left;
    margin-top: 0;
}

/* Form stuff */
.ht6-form-input {
    margin-bottom: 1.5em;
    border: 1px solid var(--secondary-dark-navy);
    border-radius: 2px;
    height: 2.5em;
    width: 25em;
    max-width: 100%;
}

.checkbox > label > input[type="checkbox"] {
    display: inline;
}

.ht6-form-group label,.ht6-form-group input {
    display: block;
}
.ht6-form-label {
    color: var(--secondary-dark-navy);
    font-weight: 700;
}

.ht6-input-error-msg {
    display: block;
}

input[aria-invalid='true'] {
    border: 1px solid #CA500B;
    background-color: #FFF5EF;
}

#kc-register-form {
    display: flex;
    flex-wrap: wrap;
}

#kc-register-form > .ht6-form-group > div > .ht6-form-input {
    width: 100%;
}

#kc-register-form > .full-width > div > .ht6-form-input {
    width: var(--form-half-width-width);
}


.ht6-form-group.full-width{
    width: 100%;
    flex-basis: 100%;
}

.ht6-form-group.half-width.left {
    width: var(--form-half-width-width);
    margin-right: var(--form-half-width-margin);
}

.ht6-form-group.half-width.right {
    width: 50%;
}

.ht6-button {
    color: white;
    padding: calc(0.5em - 1px) calc(1em - 1px);
    letter-spacing: 0.125em;
    border-radius: 0.125em;
    appearance: none;
    cursor: pointer;
    position: relative;
    right: 0;
    float: right;
    clear: right;
}

.ht6-button.primary {
    box-shadow: 0 0.125em 0.25em 0 #00000033;
    background-color: var(--secondary-dark-navy);
    border: 1px solid var(--secondary-dark-navy);
    text-transform: uppercase;
}

/* Misc. Components */
.ht6-info-card {
    padding-left: 1.5em;
    padding-top: 1em;
    padding-bottom: 1em;
    margin-bottom: 2em;
    border-left: 2px solid #4F4F4F;
    background-color: #F2F2F2;

    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-column-gap: 1em;
    grid-row-gap: 1em;

    width: 100%;
}

.ht6-info-card .content .title {
    margin-top: 0;
    color: #0B2F39;
}

.ht6-info-card.success {
    border-left: 2px solid #0F893B;
    background-color: #F3FFF8;
}

.ht6-info-card.warning {
    border-left: 2px solid #CA500B;
    background-color: #FFF5EF;
}

.ht6-info-card.error {
    border-left: 2px solid #CA500B;
    background-color: #FFF5EF;
}

.ht6-info-card img {
    grid-column: span 1;
}

.ht6-info-card .content {
    grid-column: span 10;
}

